cpp/test/Slice/errorDetection/IllegalMetadata.ice
// Copyright (c) ZeroC, Inc.

[["suppress-warning"]] // okay

module Hello {}

[["suppress-warning"]] // error
